--- a/NA-1.ipynb
+++ b/NA-1.ipynb
@@ -895,85 +895,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 15 : Given a starting point in an array of XY size. You have to rotate a sub array of size N , starting from given start point.\n",
-    "#### OR\n",
-    "#### You are given a mxm matrix, write a function to rotate sub-matrix within the matrix by 90 degree anti-clockwise. Function takes X , Y as starting row and column co-ordinates or matrix and N as the size of sub-matrix as arguments (in-place rotation)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xy = [[1,2,3,4],[5,6,7,8],[9,10,11,12],[13,14,15,16]]\n",
-    "# transpose\n",
-    "result = [[None]* len(x) for x in xy]\n",
-    "for i in range(0,len(xy[0])):\n",
-    "    for j in range(0,len(xy)):\n",
-    "        if i!=0 and j!=0:\n",
-    "            result[i][j] = xy[j][i]\n",
-    "        else:\n",
-    "            result[i][j] = xy[i][j]\n",
-    "# Column reverse\n",
-    "k=len(xy)-1\n",
-    "matrix_2 = [[None]* len(x) for x in result]\n",
-    "for i in range(0,len(xy[0])):\n",
-    "    for j in range(0,len(xy)):\n",
-    "            if i!=0 and j!=0:\n",
-    "                matrix_2[j][i]= result[k][j]\n",
-    "                k-=1\n",
-    "                if j >=k:\n",
-    "                    break\n",
-    "            else:\n",
-    "                matrix_2[i][j] = xy[i][j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 3, 4], [5, 6, 10, 14], [9, 7, 11, 15], [13, 8, 12, 16]]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 3, 4], [5, 8, 6, 2], [9, 11, None, None], [13, None, None, None]]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matrix_2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question 16 : String manupulation"
+    "#### Question 15 : String manupulation"
    ]
   },
   {
@@ -1019,7 +941,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 17 : String manupulation\n",
+    "#### Question 16 : String manupulation\n",
     "modify_variableName > modify_variableName\n",
     "thisIsTheFunction > this_is_the_function"
    ]
@@ -1096,11 +1018,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 17 : Given a starting point in an array of XY size. You have to rotate a sub array of size N , starting from given start point.\n",
+    "#### OR\n",
+    "#### You are given a mxm matrix, write a function to rotate sub-matrix within the matrix by 90 degree anti-clockwise. Function takes X , Y as starting row and column co-ordinates or matrix and N as the size of sub-matrix as arguments (in-place rotation)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Not completed\n",
+    "xy = [[1,2,3,4],[5,6,7,8],[9,10,11,12],[13,14,15,16]]\n",
+    "# transpose\n",
+    "result = [[None]* len(x) for x in xy]\n",
+    "for i in range(0,len(xy[0])):\n",
+    "    for j in range(0,len(xy)):\n",
+    "        if i!=0 and j!=0:\n",
+    "            result[i][j] = xy[j][i]\n",
+    "        else:\n",
+    "            result[i][j] = xy[i][j]\n",
+    "# Column reverse\n",
+    "k=len(xy)-1\n",
+    "matrix_2 = [[None]* len(x) for x in result]\n",
+    "for i in range(0,len(xy[0])):\n",
+    "    for j in range(0,len(xy)):\n",
+    "            if i!=0 and j!=0:\n",
+    "                matrix_2[j][i]= result[k][j]\n",
+    "                k-=1\n",
+    "                if j >=k:\n",
+    "                    break\n",
+    "            else:\n",
+    "                matrix_2[i][j] = xy[i][j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4], [5, 6, 10, 14], [9, 7, 11, 15], [13, 8, 12, 16]]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4], [5, 8, 6, 2], [9, 11, None, None], [13, None, None, None]]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_2"
+   ]
   }
  ],
  "metadata": {
